--- a/about.html
+++ b/about.html
@@ -7,6 +7,9 @@
     <title>XiaoKun Chen's simple resume</title>
 </head>
 <body>
+    <nav>
+        <a href="">Go to XiaoKun Chen's blogs page</a>
+    </nav>
     <header>
         <h1>Resume</h1>
     </header>
@@ -43,8 +46,6 @@
         <li>I attended Homecoming, Spring Festival Gala and The Voice of China.</li>
         <li>I attended the The Hope Star of English which is to speak English in China</li>
     </ol>
-
-    <p><a href="">Click me to XiaoKun Chen's another page, which is about my favorite two original blogs</a></p>
 
 
     
