--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <nav>
-        <a href="">Go to XiaoKun Chen's Resume page</a>
+        <a href="https://papaya-cucurucho-bd6f7b.netlify.app">Go to XiaoKun Chen's Resume page</a>
     </nav>
     <header>
         <h1>XiaoKun Chen's favorite two blogs</h1>
