--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <nav>
-        <a href="">Go to XiaoKun Chen's blogs page</a>
+        <a href="https://fastidious-fox-fa6237.netlify.app">Go to XiaoKun Chen's blogs page</a>
     </nav>
     <header>
         <h1>Resume</h1>
