--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
     <header>
         <h1>Resume</h1>
     </header>
-    <p><img src="XiaoKunChen.JPG" style="height: 150px; width: 150px;"></p>
+    <p><img src="XiaoKunChen.JPG" alt="Xiaokun Chen's resume"style="height: 150px; width: 150px;"></p>
     <p>Name: XiaoKun Chen</p>
     <p>Address: 2522 Lake Lansing Rd, APT4, 48912, Lansing MI</p>
     <p>Email: <a href="mailto:chenx137@msu.edu">chenx137@msu.edu</a></p>
@@ -24,7 +24,6 @@
     <h2>Education:</h2>
     <ul>
         <li>Michigan State University(2019 - NOW)</li>
-        <p>Major: Information Science</p>
         <li>Chongqing No.2 Forieign Language School (2016 - 2019)</li>
     </ul>
 
