--- a/about.html
+++ b/about.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <nav>
-        <a href="https://fastidious-fox-fa6237.netlify.app">Go to XiaoKun Chen's blogs page</a>
+        <a href="https://fastidious-fox-fa6237.netlify.app">Go to XiaoKun Chen's blogs page</a><br>
+        <a href="https://stately-otter-fe8f11.netlify.app">Contact us!!!</a>
     </nav>
     <header>
         <h1>Resume</h1>
