--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <nav>
-        <a href="https://papaya-cucurucho-bd6f7b.netlify.app">Go to XiaoKun Chen's Resume page</a>
+        <a href="https://papaya-cucurucho-bd6f7b.netlify.app">Go to XiaoKun Chen's Resume page</a><br>
+        <a href="https://stately-otter-fe8f11.netlify.app">Contact us!!!</a>
     </nav>
     <header>
         <h1>XiaoKun Chen's favorite two blogs</h1>
