--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,13 @@
     <title>Contact Form</title>
 </head>
 <body>
-<h1>Contact Form</h1>
+    <nav>
+        <a href="https://papaya-cucurucho-bd6f7b.netlify.app">Go to XiaoKun Chen's Resume page</a><br>
+        <a href="https://fastidious-fox-fa6237.netlify.app">Go to XiaoKun Chen's blogs page</a>
+    </nav>
+    <header>
+        <h1>Contact form</h1>
+    </header>
 <form>
     <label>First Nmae:
         <input type="text"><br>
