--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <nav>
         <a href="https://papaya-cucurucho-bd6f7b.netlify.app">Go to XiaoKun Chen's Resume page</a><br>
-        <a href="https://stately-otter-fe8f11.netlify.app">Contact us!!!</a>
+        <a href="https://dulcet-wisp-15be0b.netlify.app">Contact us!!!</a>
     </nav>
     <header>
         <h1>XiaoKun Chen's favorite two blogs</h1>
