--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <nav>
-        <a href="https://papaya-cucurucho-bd6f7b.netlify.app">Go to XiaoKun Chen's Resume page</a><br>
+        <a href="https://beautiful-conkies-484da5.netlify.app/">Go to XiaoKun Chen's Resume page</a><br>
         <a href="https://dulcet-wisp-15be0b.netlify.app">Contact us!!!</a>
     </nav>
     <header>
