--- a/about.html
+++ b/about.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>XiaoKun Chen's simple resume</title>
 </head>
 <body>
     <nav>
-        <a href="https://fastidious-fox-fa6237.netlify.app">Go to XiaoKun Chen's blogs page</a><br>
-        <a href="https://dulcet-wisp-15be0b.netlify.app">Contact us!!!</a>
+        <a href="https://fastidious-fox-fa6237.netlify.app" target="_blogs">Go to XiaoKun Chen's blogs page</a><br>
+        <a href="https://dulcet-wisp-15be0b.netlify.app" target="_contact">Contact us!!!</a>
     </nav>
     <header>
         <h1>Resume</h1>
