--- a/contact.html
+++ b/contact.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Contact Form</title>
 </head>
 <body>
     <nav>
-        <a href="https://beautiful-conkies-484da5.netlify.app">Go to XiaoKun Chen's Resume page</a><br>
-        <a href="https://fastidious-fox-fa6237.netlify.app">Go to XiaoKun Chen's blogs page</a>
+        <a href="https://beautiful-conkies-484da5.netlify.app" target="_resume">Go to XiaoKun Chen's Resume page</a><br>
+        <a href="https://fastidious-fox-fa6237.netlify.app" target="_blogs">Go to XiaoKun Chen's blogs page</a>
     </nav>
     <header>
         <h1>Contact form</h1>
