--- a/contact.html
+++ b/contact.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <nav>
-        <a href="https://beautiful-conkies-484da5.netlify.app" target="resume">Go to XiaoKun Chen's Resume page</a><br>
-        <a href="https://fastidious-fox-fa6237.netlify.app" target="blogs">Go to XiaoKun Chen's blogs page</a>
+        <a href="about.html" target="resume">Go to XiaoKun Chen's Resume page</a><br>
+        <a href="index.html" target="blogs">Go to XiaoKun Chen's blogs page</a>
     </nav>
     <header>
         <h1>Contact form</h1>
