--- a/about.html
+++ b/about.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <nav>
-        <a href="https://fastidious-fox-fa6237.netlify.app" target="blogs">Go to XiaoKun Chen's blogs page</a><br>
-        <a href="https://dulcet-wisp-15be0b.netlify.app" target="contact">Contact us!!!</a>
+        <a href="index.html" target="blogs">Go to XiaoKun Chen's blogs page</a><br>
+        <a href="contact.html" target="contact">Contact us!!!</a>
     </nav>
     <header>
         <h1>Resume</h1>
