--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <nav>
-        <a href="https://beautiful-conkies-484da5.netlify.app" target="resume">Go to XiaoKun Chen's Resume page</a><br>
-        <a href="https://dulcet-wisp-15be0b.netlify.app" target="contact">Contact us!!!</a>
+        <a href="about.html" target="resume">Go to XiaoKun Chen's Resume page</a><br>
+        <a href="contact.html" target="contact">Contact us!!!</a>
     </nav>
     <header>
         <h1>XiaoKun Chen's favorite two blogs</h1>
