--- a/about.html
+++ b/about.html
@@ -8,8 +8,8 @@
     <title>XiaoKun Chen's simple resume</title>
 </head>
 <body>
-    <nav>
-        <a href="index.html" target="blogs">Go to XiaoKun Chen's blogs page</a><br>
+    <nav class="position-display">
+        <a href="index.html" target="blogs"> My Blogs</a><br>
         <a href="contact.html" target="contact">Contact us!!!</a>
     </nav>
     <header>
