--- a/contact.html
+++ b/contact.html
@@ -8,15 +8,15 @@
     <title>Contact Form</title>
 </head>
 <body>
-    <nav>
-        <a href="about.html" target="resume">Go to XiaoKun Chen's Resume page</a><br>
-        <a href="index.html" target="blogs">Go to XiaoKun Chen's blogs page</a>
+    <nav class="position-display">
+        <a href="about.html" target="resume">About Me</a><br>
+        <a href="index.html" target="blogs">My blogs</a>
     </nav>
     <header>
         <h1>Contact form</h1>
     </header>
 <form>
-    <label>First Nmae:
+    <label>First Name:
         <input type="text"><br>
     </label>
     <label>Last Name:
@@ -36,8 +36,7 @@
     <label>Comment:
         <input type="text">
     </label><br>
-    <button>Submit</button>
 </form>
-    
+<button>Submit</button>
 </body>
 </html>
