--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
     </section>
     <section>
         <form>
-            <label id="signup">
+            <label>
                 Sign up for our newsletter
                 <input type="text">
             </label>
