--- a/contact.html
+++ b/contact.html
@@ -37,6 +37,6 @@
         <input type="text">
     </label><br>
 </form>
-<button>Submit</button>
+<button class="submit">Submit</button>
 </body>
 </html>
